# TerrainToObj

./: .gitignore  CMakeLists.txt
include/: height_map.h  mesh_generator.h  obj_writer.h  priority_queue_custom.h  tri_priority_queue.h  vec2.h  vec3.h
lib/stb/: stb_image.h
src/: CMakeLists.txt  height_map.cpp  main.cpp  mesh_generator.cpp  obj_writer.cpp  priority_queue_custom.cpp  tri_priority_queue.cpp
test/: CMakeLists.txt  height_map_tests.cpp  tri_priority_queue_tests.cpp  vec2_tests.cpp  vec3_tests.cpp
